canadensis_codegen_rust/tests/compile_fail/enum_discriminant_not_uint/canadensis/DiscriminantNotUInt.1.0.dsdl
#[canadensis(enum)]

int3 value

int3 VALUE_1 = 1

@sealed
